Fixing profile name spacing.

--- a/remo/base/static/base/css/app-fd4.less
+++ b/remo/base/static/base/css/app-fd4.less
@@ -1017,6 +1017,7 @@ ul.edit-profile-item {
         font-size: 24px;
         letter-spacing: -0.5px;
         margin-bottom: 1em;
+        margin-top: 0.5em;
     }
     h2 {
         font-size: 18px;
